[gd_scene load_steps=8 format=3 uid="uid://d1lsudit8f8a6"]

[ext_resource type="Script" uid="uid://cwystlp51uc0w" path="res://Scripts/game_manager.gd" id="1_qxrlw"]
[ext_resource type="PackedScene" uid="uid://covuxe7b5dtas" path="res://Scenes/skill_menu.tscn" id="3_wowpa"]
[ext_resource type="PackedScene" uid="uid://ilfoogbwr1f8" path="res://Scenes/battle_menu.tscn" id="3_wrm1d"]
[ext_resource type="PackedScene" uid="uid://ck5d8mosuvy40" path="res://Scenes/what_happen.tscn" id="4_3dryh"]
[ext_resource type="PackedScene" uid="uid://drp8lg7imqipj" path="res://Scenes/item_menu.tscn" id="4_i6g32"]
[ext_resource type="PackedScene" uid="uid://4crm2b8ufsb3" path="res://Scenes/turn_order.tscn" id="5_wowpa"]
[ext_resource type="PackedScene" uid="uid://dxjf750rw0utl" path="res://Scenes/enemy.tscn" id="7_1l0tm"]

[node name="Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_qxrlw")

[node name="HeroStage" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EnemyStage" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Enemy" parent="EnemyStage" instance=ExtResource("7_1l0tm")]
position = Vector2(835, 258)

[node name="Menus" type="Control" parent="."]
process_mode = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BattleMenu" parent="Menus" instance=ExtResource("3_wrm1d")]
layout_mode = 0
offset_left = 530.0
offset_top = 243.0
offset_right = 708.0
offset_bottom = 520.0

[node name="SkillMenu" parent="Menus" instance=ExtResource("3_wowpa")]
layout_mode = 1
offset_left = 779.0
offset_top = 280.0
offset_right = 739.0
offset_bottom = 280.0

[node name="ItemMenu" parent="Menus" instance=ExtResource("4_i6g32")]
layout_mode = 0
offset_left = 711.0
offset_top = 312.0
offset_right = 872.0
offset_bottom = 523.0

[node name="WhatHappen" parent="." instance=ExtResource("4_3dryh")]
offset_left = 497.0
offset_top = 2.0
offset_right = 610.0
offset_bottom = 25.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TurnOrder" parent="CanvasLayer" instance=ExtResource("5_wowpa")]
offset_left = 140.0
offset_top = 33.0
offset_right = -187.0
offset_bottom = 142.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2"]
process_mode = 3
offset_top = 527.0
offset_right = 1152.0
offset_bottom = 649.0

[node name="UI Contatiner" type="HBoxContainer" parent="CanvasLayer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FlavorText" type="VBoxContainer" parent="."]
offset_left = 696.0
offset_top = 429.0
offset_right = 1397.0
offset_bottom = 563.0

[node name="Line1" type="Label" parent="FlavorText"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Line2" type="Label" parent="FlavorText"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="Line3" type="Label" parent="FlavorText"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
